deploy/k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: meghmitra-web
  namespace: meghmitra
  labels:
    app: meghmitra-web
    app.kubernetes.io/name: adhigrahan-radar-web
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: adhigrahan-radar
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app: meghmitra-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
